force-app/main/default/objects/tspa__Digital_Engagement__c/fields/tspa__isActive__c.field-meta.xml
<CustomField>
    <fullName>tspa__isActive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>isActive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>