force-app/main/default/objects/tspa__Digital_Engagement__c/fields/tspa__Original_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Original_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>