force-app/main/default/objects/tspa__Digital_Engagement__c/fields/tspa__Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>